--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
       text-align: center;
       padding: 20px 0;
     }
+    <h2>Our Menu</h2>
+<div style="display: flex; flex-wrap: wrap; gap: 20px;">
+  <div style="width: 200px; text-align: center;">
+    <img src="coldcoffee.jpg" alt="Cold Coffee" width="200">
+    <p><strong>Cold Coffee</strong><br>₹120</p>
+  </div>
+  <div style="width: 200px; text-align: center;">
+    <img src="mango_lassi.jpg" alt="Mango Lassi" width="200">
+    <p><strong>Mango Lassi</strong><br>₹100</p>
+  </div>
+  <div style="width: 200px; text-align: center;">
+    <img src="paneer_roll.jpg" alt="Paneer Roll" width="200">
+    <p><strong>Paneer Roll</strong><br>₹150</p>
+  </div>
+  <!-- Add more items the same way -->
+</div>
+
   </style>
 </head>
 <body>
